--- a/index.Rmd
+++ b/index.Rmd
@@ -12,6 +12,8 @@ output:
 knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 ```
 
+## [Quiz #1](https://unr.instructure.com/courses/15896/quizzes/21572)
+
 **Instructor:** Kevin Shoemaker   
 **Teaching Assistant** Margarete Walden   
 **Office**: FA 220E			 		 
